--- a/index.html
+++ b/index.html
@@ -8,36 +8,60 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="close__menu">
+    <button class="toggle title" type="button" onclick="document.body.classList.toggle('close__menu');document.querySelector('.fa-solid').classList.toggle('fa-bars-staggered'); document.querySelector('.fa-solid').classList.toggle('fa-xmark')">МЕНЮ <i class="fa-solid fa-bars-staggered"></i></button>
+    <div class="bg">
+        <h1 style="display: none">HIDDEN ELEMENT</h1>
+    </div>
+    <header class="header">
+        <section class="header__side">
+            <h1 class="header__logo title">Lumen Forge<span class="header__slogan">Даже лебедь в шоке.</span></h1>
+            <h6 class="header__cors title">&copy; Lumen Forge. Все права защищены.</h6>
+        </section>
+        <nav class="header__menu">
+            <ul class="header__links">
+                <li class="header__link-item"><a href="" class="header__link title"><span class="title">ДОМОЙ</span><span class="title">ДОМОЙ</span></a></li>
+                <li class="header__link-item"><a href="" class="header__link title"><span class="title">О НАС</span><span class="title">О НАС</span></a></li>
+                <li class="header__link-item"><a href="" class="header__link title"><span class="title">КОНТАКТЫ</span><span class="title">КОНТАКТЫ</span></a></li>
+                <li class="header__link-item"><a href="" class="header__link title"><span class="title">ПАРТНЕРСТВО</span><span class="title">ПАРТНЕРСТВО</span></a></li>
+                <li class="header__link-item"><a href="" class="header__link title"><span class="title">ПОЧЕМУ МЫ?</span><span class="title">ПОЧЕМУ МЫ?</span></a></li>
+                <li class="header__link-item"><a href="" class="header__link title"><span class="title">УСЛУГИ</span><span class="title">УСЛУГИ</span></a></li>
+            </ul>
+        </nav>
+    </header>
+
     <main>
+        <div class="marquee">
+            <div class="marquee__track">
+                <span class="marquee__item title"> | WEB ДИЗАЙН & WEB РАЗРАБОТКА | WEB ДИЗАЙН & WEB РАЗРАБОТКА
+                </span>
+                <span class="marquee__item title"> | WEB ДИЗАЙН & WEB РАЗРАБОТКА | WEB ДИЗАЙН & WEB РАЗРАБОТКА
+                </span>
+                <span class="marquee__item title"> | WEB ДИЗАЙН & WEB РАЗРАБОТКА | WEB ДИЗАЙН & WEB РАЗРАБОТКА
+                </span>
+                <span class="marquee__item title"> | WEB ДИЗАЙН & WEB РАЗРАБОТКА | WEB ДИЗАЙН & WEB РАЗРАБОТКА
+                </span>
+                <span class="marquee__item title"> | WEB ДИЗАЙН & WEB РАЗРАБОТКА | WEB ДИЗАЙН & WEB РАЗРАБОТКА
+                </span>
+                <span class="marquee__item title"> | WEB ДИЗАЙН & WEB РАЗРАБОТКА | WEB ДИЗАЙН & WEB РАЗРАБОТКА
+                </span>
+                <span class="marquee__item title"> | WEB ДИЗАЙН & WEB РАЗРАБОТКА | WEB ДИЗАЙН & WEB РАЗРАБОТКА
+                </span>
+                <span class="marquee__item title"> | WEB ДИЗАЙН & WEB РАЗРАБОТКА | WEB ДИЗАЙН & WEB РАЗРАБОТКА
+                </span>
+                <span class="marquee__item title"> | WEB ДИЗАЙН & WEB РАЗРАБОТКА | WEB ДИЗАЙН & WEB РАЗРАБОТКА
+                </span>
+                <span class="marquee__item title"> | WEB ДИЗАЙН & WEB РАЗРАБОТКА | WEB ДИЗАЙН & WEB РАЗРАБОТКА
+                </span>
+            </div>
+        </div>
+
         <section class="firstscreen">
+            <div style="height: 10vh;"></div>
             <div class="bg">
                 <h1 style="display: none">HIDDEN ELEMENT</h1>
             </div>
-            <div class="marquee">
-                <div class="marquee__track">
-                    <span class="marquee__item title"> | WEB ДИЗАЙН & WEB РАЗРАБОТКА | WEB ДИЗАЙН & WEB РАЗРАБОТКА
-                    </span>
-                    <span class="marquee__item title"> | WEB ДИЗАЙН & WEB РАЗРАБОТКА | WEB ДИЗАЙН & WEB РАЗРАБОТКА
-                    </span>
-                    <span class="marquee__item title"> | WEB ДИЗАЙН & WEB РАЗРАБОТКА | WEB ДИЗАЙН & WEB РАЗРАБОТКА
-                    </span>
-                    <span class="marquee__item title"> | WEB ДИЗАЙН & WEB РАЗРАБОТКА | WEB ДИЗАЙН & WEB РАЗРАБОТКА
-                    </span>
-                    <span class="marquee__item title"> | WEB ДИЗАЙН & WEB РАЗРАБОТКА | WEB ДИЗАЙН & WEB РАЗРАБОТКА
-                    </span>
-                    <span class="marquee__item title"> | WEB ДИЗАЙН & WEB РАЗРАБОТКА | WEB ДИЗАЙН & WEB РАЗРАБОТКА
-                    </span>
-                    <span class="marquee__item title"> | WEB ДИЗАЙН & WEB РАЗРАБОТКА | WEB ДИЗАЙН & WEB РАЗРАБОТКА
-                    </span>
-                    <span class="marquee__item title"> | WEB ДИЗАЙН & WEB РАЗРАБОТКА | WEB ДИЗАЙН & WEB РАЗРАБОТКА
-                    </span>
-                    <span class="marquee__item title"> | WEB ДИЗАЙН & WEB РАЗРАБОТКА | WEB ДИЗАЙН & WEB РАЗРАБОТКА
-                    </span>
-                    <span class="marquee__item title"> | WEB ДИЗАЙН & WEB РАЗРАБОТКА | WEB ДИЗАЙН & WEB РАЗРАБОТКА
-                    </span>
-                </div>
-            </div>
+
 
             <div class="firstscreen__logo">
                 <h1 class="firstscreen__logo-text hidden title">Lumen<br class="mobile-only"> Forge</h1>
@@ -48,19 +72,22 @@
 
             <div class="firstscreen__text">
                 <div class="firstscreen__side">
-                    <h1 class="firstscreen__title title">Веб-решения, которые продают — для вашего бизнеса и ваших клиентов</h1>
+                    <h1 class="firstscreen__title title">Веб-решения, которые продают — для вашего бизнеса и ваших
+                        клиентов</h1>
 
-                    <h2 class="firstscreen__subtitle">Современный дизайн, безупречная скорость и полная поддержка 24/7. Мы не просто создаём сайты — мы
-                    создаём инструмент роста.</h2>
+                    <h2 class="firstscreen__subtitle">Современный дизайн, безупречная скорость и полная поддержка 24/7.
+                        Мы не просто создаём сайты — мы
+                        создаём инструмент роста.</h2>
                 </div>
                 <a href="#contacts" class="firstscreen__link title">Заказать сайт</a>
             </div>
         </section>
+        <div style="width: 98vw; height: 97vh; background-color: black; border-radius: 60px; margin: 1.5vh 1vw;"></div>
         <div style="width: 100vw; height: 300vh;"></div>
     </main>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.0/gsap.min.js"></script>
-
+<script src="https://kit.fontawesome.com/8f446d19ac.js" crossorigin="anonymous"></script>
 <script src="js/script.js"></script>
 
 </html>
